[gd_scene load_steps=10 format=3 uid="uid://buwe3e65oweak"]

[ext_resource type="Texture2D" uid="uid://3v27oqn0ij87" path="res://Assets/Images/Tiles/Roguelike Dungeon/Sprites/Monsters/Skeleton/Variant0/Skeleton_Walk_0.png" id="1_l7ayp"]
[ext_resource type="Script" path="res://Game/Entities/skeleton.gd" id="1_qnp5o"]
[ext_resource type="Texture2D" uid="uid://dsjyae4efdv5s" path="res://Assets/Images/Tiles/Roguelike Dungeon/Sprites/Monsters/Skeleton/Variant0/Skeleton_Walk_1.png" id="2_cvm0d"]
[ext_resource type="Texture2D" uid="uid://bbd1uajsvqjjl" path="res://Assets/Images/Tiles/Roguelike Dungeon/Sprites/Monsters/Skeleton/Variant0/Skeleton_Walk_2.png" id="3_b86jd"]
[ext_resource type="Texture2D" uid="uid://by3beyuni3c4f" path="res://Assets/Images/Tiles/Roguelike Dungeon/Sprites/Monsters/Skeleton/Variant0/Skeleton_Walk_3.png" id="4_6n2oj"]
[ext_resource type="PackedScene" uid="uid://c37tk8y82lso" path="res://Components/FlipSprite/flip_sprite.tscn" id="6_88w5v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_xvjpv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_l7ayp")
}, {
"duration": 1.0,
"texture": ExtResource("2_cvm0d")
}, {
"duration": 1.0,
"texture": ExtResource("3_b86jd")
}, {
"duration": 1.0,
"texture": ExtResource("4_6n2oj")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5d22h"]
size = Vector2(65, 81)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jjjkn"]
size = Vector2(63.3333, 83.3333)

[node name="Skeleton" type="CharacterBody2D"]
scale = Vector2(0.3, 0.3)
script = ExtResource("1_qnp5o")

[node name="DirectionalFlipper" parent="." instance=ExtResource("6_88w5v")]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -6.66667)
sprite_frames = SubResource("SpriteFrames_xvjpv")
animation = &"Walk"
offset = Vector2(0, -68.89)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(4.5, -38.5)
shape = SubResource("RectangleShape2D_5d22h")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(5, -38.3333)
shape = SubResource("RectangleShape2D_jjjkn")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
